<resources>
    <string name="app_name">Macaria</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="submit">Submit</string>
    <string name="terms_conditions">Terms &amp; Conditions</string>
    <string name="exchange_return">Exchange &amp; Return</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="contact_us">Contact Us</string>
    <string name="saved_addresses">Saved Addresses</string>
    <string name="save_address">Save Address</string>
    <string name="orders_history">Orders History</string>
    <string name="orders_details">Order Details</string>
    <string name="account_info">Account info</string>
    <string name="login2"><u>Login</u></string>
    <string name="change"><u>change</u></string>
    <string name="send">Send</string>
    <string name="apply">Apply</string>
    <string name="trending_searches">Trending Searches</string>
    <string name="confirm_payment">Confirm Payment</string>
    <string name="proceed_to_check_out">Proceed To Check Out</string>
    <string name="home">Home</string>
    <string name="faq">FAQs</string>
    <string name="order_summery">Order Summery</string>
    <string name="egypt">Egypt</string>
    <string name="contact_us_body">We’re happy to answer any questions you have or provide you with an estimate. Just send us a message in the form below with any questions you may have.</string>
    <string name="change_password">Change Password</string>
    <string name="logout">Logout</string>
    <string name="logout_message">Are you sure that you want to logout?</string>
    <string name="categories">Categories</string>
    <string name="favorite">Favorite</string>
    <string name="sort_by">Sort by</string>
    <string name="result">Result</string>
    <string name="subtotal">Subtotal</string>
    <string name="payment_text">Select the Payment Method You Want to Use.</string>
    <string name="cart_address_text">Where Would You Like Us To Send It ?</string>
    <string name="tax_included">(Taxes Included)</string>
    <string name="filter_by">Filter by</string>
    <string name="profile">Profile</string>
    <string name="add_valid_name">Please add a valid name</string>
    <string name="add_valid_email">Please add a valid email</string>
    <string name="forget_your_password">Forget your password?</string>
    <string name="forget_password">Forget password</string>
    <string name="new_password">New password</string>
    <string name="current_password">Current Password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="phone_number">Phone Number*</string>
    <string name="password">Password</string>
    <string name="from">From</string>
    <string name="error">Error</string>
    <string name="cancel">Cancel</string>
    <string name="address">Address</string>
    <string name="postal_code">Postal Code</string>
    <string name="flat_no">Flat No</string>
    <string name="apartment_no">Apartment No</string>
    <string name="building_no">Building No</string>
    <string name="enter_phone_number">Please Enter Your Phone Number</string>
    <string name="yes">Yes</string>
    <string name="style">Style</string>
    <string name="cart">Cart</string>
    <string name="by">by: </string>
    <string name="you_may_also_like">YOU MAY ALSO LIKE</string>
    <string name="description">DESCRIPTION</string>
    <string name="select_color">Select Color</string>
    <string name="select_your_size">Select your Size</string>
    <string name="size_guide">Size Guide</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="country_region">Country/Region</string>
    <string name="save_changes">Save Changes</string>
    <string name="password_not_match">Password not match</string>
    <string name="already_have_account">already have an account?</string>
    <string name="email">Email</string>
    <string name="select_city">Select city</string>
    <string name="reset_password">Reset Password</string>
    <string name="verify_phone_dis">A 4-digit confirmation code has been sent to your mobile number</string>
    <string name="verify_phone_number">Verify Phone Number</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="your_name">Your Name</string>
    <string name="your_message">Your Message</string>
    <string name="email_address">Email Address *</string>
    <string name="create_account"><u>Create Account</u></string>
    <string name="resend_code"><u>Resend code</u></string>
    <string name="create_account2">Create Account</string>
    <string name="add_new_address">Add New Address</string>
    <string name="add_valid_mobile"><u>Please add a valid phone number</u></string>
    <string name="add_valid_password"><u>Please add a valid Password</u></string>
    <string name="internet_error">Unable to connect to the internet</string>
    <string name="error_message">Something went wrong</string>
    <string name="message_send">The message has been sent successfully</string>
    <string name="order_reference">Order Reference</string>
    <string name="placed_on">Placed On</string>
    <string name="total_price">Total Price</string>
    <string name="payment">Payment</string>
    <string name="payment_with_paymob">Pay with Paymob</string>
    <string name="cash_on_delivery">Cash on delivery</string>
    <string name="payment_method">Payment Method</string>
    <string name="details"><u>details</u></string>
    <string name="reorder"><u>Reorder</u></string>
    <string name="status">Status</string>
    <string name="egp">EGP</string>
    <string name="qty">Qty</string>
    <string name="size">Size</string>
    <string name="price">Price</string>
    <string name="color">Color</string>
    <string name="color_">Color :</string>
    <string name="search_here">Search here...</string>
    <string name="shipping">Shipping</string>
    <string name="taxes">Taxes</string>
    <string name="total">Total</string>
    <string name="to">To</string>
    <string name="item_count">Item Count</string>
    <string name="reviews">REVIEWS</string>
    <string name="clear">CLEAR</string>
    <string name="view_results">VIEW RESULTS</string>
    <string name="promo_code">Promocode</string>
    <string name="best_selling">best selling</string>
    <string name="new_arrivals">New arrivals</string>
    <string name="reviewsSmall">reviews</string>
    <string name="shipping_method">Shipping Method</string>
    <string name="all_reviews">All Reviews</string>
    <string name="products">Products</string>
    <string name="login_register">Login / register</string>
    <string name="keep_shopping">Keep Shopping</string>
    <string name="your_cart_is_empty">Your Cart Is Empty.</string>
    <string name="empty_wishlist">Your Wishlist Is Empty.</string>
    <string name="explore_products">Explore Products</string>
    <string name="newest_items">Newest Items</string>
    <string name="price_high_to_low">Price High To Low</string>
    <string name="price_low_to_high">Price Low To High</string>
    <string name="leave_comment">Leave Comment</string>
    <string name="comment_title">Comment title</string>
    <string name="leave_your_review">Leave Your Review</string>
    <string name="add_review">Add Review</string>
    <string name="review_item"><u>Review item</u></string>
    <string name="delivery_address">Delivery Address</string>
    <string name="sub_total">Sub Total</string>
    <string name="order_completed_txt1">Thanks for shopping from Macaria website</string>
    <string name="order_completed_txt2">Your Order Completed Successfully</string>
    <string name="order_completed_txt3"><u>Track your order</u></string>

</resources>