<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        tools:context=".ui.homeScreen.cart.fragments.OrderCompletedFragment" >

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/order_completed_image" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/norms_medium"
            android:text="@string/order_completed_txt1" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/order_completed_txt2" />

        <TextView
            android:id="@+id/orderNumber"
            android:layout_width="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            tools:text="order number #21548" />

        <TextView
            android:id="@+id/trackOrder"
            android:layout_width="wrap_content"
            android:padding="10dp"
            android:layout_marginBottom="40dp"
            android:layout_height="wrap_content"
            android:text="@string/order_completed_txt3" />
    </LinearLayout>
</layout>