<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="90dp"
        android:layout_gravity="bottom"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:cardElevation="9dp"
            android:elevation="9dp"
            android:layout_marginTop="6dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="15dp" >



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:elevation="100dp"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/close"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    app:srcCompat="@drawable/ic_icon_close" />
                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_gravity="center"
                    android:fontFamily="@font/norms_medium"
                    android:text="@string/sort_by" />

                <TextView
                    android:id="@+id/bestSelling"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:textSize="14sp"
                    android:layout_marginTop="20dp"
                    android:text="@string/best_selling" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/borderColor" />

                <TextView
                    android:id="@+id/price_low_to_high"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:textSize="14sp"
                    android:text="@string/price_low_to_high" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/borderColor" />

                <TextView
                    android:id="@+id/price_high_to_low"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:textSize="14sp"
                    android:text="@string/price_high_to_low" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/borderColor" />
                <TextView
                    android:id="@+id/newest_items"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:textSize="14sp"
                    android:layout_marginBottom="40dp"
                    android:text="@string/newest_items" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </FrameLayout>
</layout>



