<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.homeScreen.profile.savedAddresses.fragments.SavedAddressesFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:gravity="center|start"
            android:orientation="horizontal">

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/fragmentContainerView2"
                class="com.macaria.app.ui.general.backFragments.BackFragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                tools:layout="@layout/fragment_back" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/norms_medium"
                android:text="@string/saved_addresses"
                android:textSize="18sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/borderColor" />

        <TextView
            android:id="@+id/cartAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/cart_address_text"
            android:textColor="@color/textColorDarkGray"
            android:textSize="13sp"
            android:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/addAddressRec"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:layout_weight="1"
            tools:listitem="@layout/address_item" />

        <TextView
            android:id="@+id/addAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:drawableStart="@drawable/ic_add_address"
            android:drawablePadding="10dp"
            android:padding="8dp"
            android:text="@string/add_new_address"
            android:textSize="15sp" />

    </LinearLayout>
</layout>